tests/toy/neg/001145_mutation.toylang
program a = { if while a do sleep; } .
